# wgfx

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  a.cpp  broken things.txt  cmakeemscript  emscriptmain  model.cpp  model.h  shader.cpp  shader.h
.cache/clangd/index/: Metal_Blit.h.A5B3422BEBA339AA.idx  SDL.c.194F80E771E8A1B1.idx  SDL.h.179C0DEB9E55A0B8.idx  SDL_RLEaccel.c.58AE1AC159C742AE.idx  SDL_RLEaccel_c.h.D6C72C57817D02E8.idx  SDL_assert.c.A0B9B01045BCECCB.idx  SDL_assert.h.448E5775A757C994.idx  SDL_assert_c.h.76D8CD9FB0F825B4.idx  SDL_atomic.c.B26844F9AA2C64D2.idx  SDL_atomic.h.134E8FC31E72D6D4.idx  SDL_audio.c.414AF471FFECE605.idx  SDL_audio.h.C60EA276BD3F529B.idx  SDL_audio_c.h.3E3415C8E0297C73.idx  SDL_audio_channel_converters.h.228B2C39B4AFB809.idx  SDL_audiocvt.c.BDFE12234EC53963.idx  SDL_audiodev.c.43336545C0F158B3.idx  SDL_audioqueue.c.DD3FB92B59268B07.idx  SDL_audioqueue.h.5A07F5D32FAFE118.idx  SDL_audioresample.c.487868B260388DCE.idx  SDL_audioresample.h.7F988C6A2B9FE32E.idx  SDL_audiotypecvt.c.65A1F7F20AF0EB8B.idx  SDL_begin_code.h.167E84DBB438E012.idx  SDL_bits.h.4696450B4937F2E8.idx  SDL_blendfillrect.c.6BCE06C1C4403C3E.idx  SDL_blendfillrect.h.7EDB6933FA3D254D.idx  SDL_blendline.c.F4F1B4668D271962.idx  SDL_blendline.h.C9ED823801281F9D.idx  SDL_blendmode.h.6BDA82662B9AC444.idx  SDL_blendpoint.c.A1BCE4ABE0E9EE78.idx  SDL_blendpoint.h.F8FD57E2DFC4F69F.idx  SDL_blit.c.8A099AFB4B2E07E2.idx  SDL_blit.h.752A268E376025ED.idx  SDL_blit_0.c.62ED9CC48A2421DB.idx  SDL_blit_1.c.C0BA455570870C2E.idx  SDL_blit_A.c.396C6DC764297E19.idx  SDL_blit_N.c.106B9CA0EA7D2409.idx  SDL_blit_auto.c.6786CC4DF184C3A2.idx  SDL_blit_auto.h.93B234A9819C3DE6.idx  SDL_blit_copy.c.AE7528CB96F6E6DB.idx  SDL_blit_copy.h.6769FC14F55D7825.idx  (+660 more)
example/: block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  clock.cpp  clock.h  constants.h  context.cpp  context.h  crosshair.h  cube.h  database.cpp  database.h  entity.cpp  entity.h  input.cpp  input.h  main.cpp  manager.cpp  manager.h  maths.cpp  maths.h  model.h  player.cpp  player.h  selection.h  shader.cpp  shader.h  shadow.h  terrain.cpp  terrain.h  test.h
examples/: LICENSE.webgpu-samples.txt  README.md
examples/common/: stanfordDragonMesh.h
examples/computeBoids/: boids.wgsl  main.cpp
examples/compute_sphere/: compute_sphere.wgsl  main.cpp  quad.wgsl  sphere_compute.hpp
examples/deferredRendering/: debugView.wgsl  gbuffer.wgsl  lightUpdate.wgsl  lighting.wgsl  main.cpp
examples/rainbow_quad/: main.cpp  rainbow_quad.wgsl
examples/rotatingCube/: main.cpp  rotatingCube.wgsl
examples/shadowMapping/: forward.wgsl  main.cpp  shadowMap.wgsl
examples/spinning_cube/: main.cpp  spinning_cube.wgsl
examples/texturedCube/: main.cpp  texturedCube.wgsl
helper/: clock.cpp  clock.h  constants.h  context.cpp  context.h  quad.h  sphere_compute.h
res/: compute.wgsl  crosshair.wgsl  cube.wgsl  example.txt  example2.txt  owl.mtl  quad.wgsl  red.wgsl  sector_occupancy.wgsl  selection.wgsl  shader.wgsl  shadow.wgsl  sphere.wgsl  voxel_edits.wgsl
ressavemeplease/: LOG  LOG.old
scripts/: generate_stanford_dragon_header.py
src/: buffer.cpp  buffer.h  context.h  help.h  main.cpp  model.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  shader.h  surface.cpp  surface.h  texture.cpp  texture.h  types.h  uniform.cpp  uniform.h  wgfx.h
